mdm-frontend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: $CI_PROJECT_NAME
spec:
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: $CI_PROJECT_NAME
