mdm-frontend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: $CI_PROJECT_NAME
spec:
  rules:
  - host: $SERVICE_URL
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: $CI_PROJECT_NAME
            port:
              number: 3000
